<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<item android:id="@+id/logout"
        android:icon="@drawable/logout_"
        android:title="@string/logout"
        app:showAsAction="never"/>-->

    <item
        android:title="@string/cart"
        android:id="@+id/cart"
        app:actionLayout="@layout/actionbaar_badge_layout"
        android:icon="@drawable/cart_32"
        app:showAsAction="always"/>

    <item android:id="@+id/refresh"
        android:title="@string/refresh"
        android:icon="@drawable/refresh"
        app:showAsAction="never"/>

    <item android:id="@+id/clear"
        android:title="@string/clear"
        android:icon="@drawable/refresh"
        app:showAsAction="never"/>

    <item android:id="@+id/report_error"
        android:title="@string/report_error"
        app:showAsAction="never"/>

</menu>