<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp">

        <TextView
            android:layout_width="@dimen/vieworder_prodid"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/prod"
            android:textColor="@color/black"
            android:visibility="visible"
            android:background="@drawable/line_left_right_bottom_draw"
            android:id="@+id/tv_prod_id"
            android:gravity="center" />
        <TextView
            android:layout_width="@dimen/vieworder_sizegroup"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/sizeg"
            android:textColor="@color/black"
            android:background="@drawable/line_right_bottom_draw"
            android:gravity="center"
            android:id="@+id/tv_size_group" />
        <TextView
            android:layout_width="@dimen/vieworder_colour"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/color"
            android:background="@drawable/line_right_bottom_draw"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/tv_color" />

        <TextView
            android:layout_width="@dimen/vieworder_looseqty"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/looseq"
            android:textColor="@color/black"
            android:background="@drawable/line_right_bottom_draw"
            android:gravity="center"
            android:id="@+id/tv_loose_qty" />
        <TextView
            android:layout_width="@dimen/vieworder_wsp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/wsp"
            android:background="@drawable/line_right_bottom_draw"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/tv_wsp" />
        <TextView
            android:layout_width="@dimen/vieworder_mrp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/mr"
            android:textColor="@color/black"
            android:background="@drawable/line_right_bottom_draw"
            android:gravity="center"
            android:id="@+id/tv_mr" />
        <TextView
            android:layout_width="@dimen/vieworder_amnt"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/amt"
            android:background="@drawable/line_right_bottom_draw"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/tv_amt" />
        <TextView
            android:layout_width="@dimen/vieworder_gst"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/gst"
            android:background="@drawable/line_right_bottom_draw"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/tv_gst_per" />
    </LinearLayout>

</LinearLayout>