<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/textViewMob"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/warehouse"
            android:layout_weight="0.3"
            android:gravity="left"
            android:id="@+id/tv_warehouse" />
        <TextView
            style="@style/textViewMob"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/qty"
            android:layout_weight="0.4"
            android:gravity="right"
            android:id="@+id/tv_qty" />
        <TextView
            style="@style/textViewMob"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/amt"
            android:layout_weight="0.4"
            android:gravity="right"
            android:id="@+id/tv_amt" />
    </LinearLayout>


</LinearLayout>